--- a/assets/css/assets.css
+++ b/assets/css/assets.css
@@ -4,3 +4,12 @@
    text-align: center;
    padding: 3%;
 }
+
+.card-style {
+   margin: 5px;
+   padding: 10px;
+   border-style: solid;
+   border-color: black;
+   border-width: 2px;
+   border-radius: 15px;
+}
