--- a/assets/css/assets.css
+++ b/assets/css/assets.css
@@ -6,10 +6,17 @@
 }
 
 .card-style {
+   display: inline-block;
+   width: 200px;
+   height: 200px;;
    margin: 5px;
    padding: 10px;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    border-radius: 15px;
+}
+
+.weather-title {
+   display: block;
 }
